Trying to resolve errors.